# scopeserver

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  list.h  scope_daemon.c  scope_daemon.h  scope_handlers.c  scope_handlers.h  scope_handlers_map.h  scope_handlers_register.c  scope_handlers_register.h  scope_server  scope_server.c  scope_server.h
